governance-shared/baselines/1.19.0/references/12-excel-generation-rules.md
# Excel 生成规范

本规则定义 ChronoPM 各文档类型导出为 Excel 文件时的结构规范。AI 生成 Excel 文件时必须遵循本规范，确保导出文件与用户原始项目管理 Excel 结构一致。

---

## 0. 通用原则

### 0.1 与 xlsx 技能配合

生成 Excel 文件时，必须同时加载 xlsx 技能（SKILL.md），遵循其核心原则：
- **公式优先**：用 Excel 公式而非硬编码值
- **零公式错误**：生成后必须通过 recalc 校验
- **视觉美观**：统一字体、表头样式、列宽适配
- **保留模板**：编辑已有文件时匹配原有格式

### 0.2 生成路径

Excel 文件生成到 `outputs/{batch_id}/files/` 目录下（遵循 `11-output-artifact-rules.md`）。

### 0.3 文件命名

格式：`{scope}-{document_type}-{period_or_date}-{version}.xlsx`

### 0.4 通用样式

| 元素 | 规范 |
|---|---|
| 字体 | 微软雅黑 10pt（表头加粗 11pt） |
| 表头行 | 背景色 #4472C4，白色字体，居中对齐 |
| 数据行 | 自动行高，顶端对齐 |
| 冻结窗格 | 冻结首行（A1） |
| 网格线 | 显示 |
| 列宽 | 根据列内容自动适配，最小 8，最大 50 |
| 日期格式 | YYYY-MM-DD（文本格式，避免 Excel 自动转换） |
| 百分比 | 0% 格式 |
| 空值 | 留空，不填 N/A 或 - |

### 0.5 数据验证下拉框通用规则

凡是状态类、类别类、是否类字段，必须设置数据验证下拉框，不允许自由输入。

---

## 1. 需求跟踪矩阵 Excel 规范

### 1.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 需求跟踪矩阵 | 全部需求清单 |

### 1.2 列定义（14列，与原始 Excel 完全一致）

| 列序 | 列头 | 列宽 | 数据验证 | 说明 |
|---|---|---|---|---|
| A | 属性 | 10 | 下拉：功能需求/非功能需求/约束需求/接口需求/数据需求 | |
| B | 功能域 | 12 | - | 如：我要注销、我要变更 |
| C | 功能模块 | 15 | - | 如：市场主体注销 |
| D | 功能内容 | 20 | - | 具体功能点 |
| E | 功能描述 | 40 | - | 详细描述 |
| F | 产品 | 10 | - | 产品负责人姓名 |
| G | 是否规划 | 10 | 下拉：是/否/线上不支持 | |
| H | 评审时间 | 12 | - | YYYY-MM-DD |
| I | 规划备注 | 20 | - | |
| J | 是否开发 | 10 | 下拉：是/否 | |
| K | 是否测试 | 10 | 下拉：是/否 | |
| L | 交付成果 | 20 | - | |
| M | 验收标准 | 30 | - | |
| N | 备注 | 20 | - | |

### 1.3 扩展列（Markdown 模板中有但原始 Excel 没有的列，导出时可选追加）

| 列序 | 列头 | 说明 |
|---|---|---|
| O | Req ID | 需求编号 REQ-XXX-NNN |
| P | 优先级 | 下拉：Must/Should/Could/Wont |
| Q | 来源 | 下拉：contract/document/meeting/implied |
| R | 状态 | 下拉：proposed/confirmed/in_progress/delivered/accepted/changed/cancelled |
| S | 关联任务 | T-YYYYMMDD-NNN |
| T | 关联里程碑 | M-NN |

### 1.4 冻结与筛选

- 冻结首行
- 首行启用自动筛选

---

## 2. 风险登记册 Excel 规范

### 2.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 风险登记册 | 全部风险记录 |

### 2.2 列定义（15列）

| 列序 | 列头 | 列宽 | 数据验证 | 说明 |
|---|---|---|---|---|
| A | 风险编号 | 12 | - | R-NNN |
| B | 关联问题 | 12 | - | I-NNN |
| C | 风险类别 | 12 | 下拉：外部/技术/资源/质量/需求/进度/成本/合规 | |
| D | 状态 | 10 | 下拉：识别中/监控中/已关闭/已发生 | |
| E | 风险描述 | 35 | - | |
| F | 发生概率 | 10 | 下拉：高/中/低 | |
| G | 影响程度 | 10 | 下拉：高/中/低 | |
| H | 风险等级 | 10 | 下拉：高/中/低 | |
| I | 触发条件 | 25 | - | |
| J | 应对策略 | 12 | 下拉：规避/转移/减轻/接受 | |
| K | 应对措施 | 30 | - | |
| L | 责任人 | 10 | - | |
| M | 关联计划编号 | 15 | - | |
| N | 状态变更记录 | 25 | - | 如：3/26 识别 -> 监控中 -> 6/12 发生 |
| O | 备注 | 20 | - | |

### 2.3 条件格式

| 列 | 条件 | 格式 |
|---|---|---|
| H（风险等级） | 值 = "高" | 红色背景 #FFC7CE，红色字体 |
| H（风险等级） | 值 = "中" | 黄色背景 #FFEB9C |
| H（风险等级） | 值 = "低" | 绿色背景 #C6EFCE |
| D（状态） | 值 = "已发生" | 红色背景 #FFC7CE |
| D（状态） | 值 = "已关闭" | 灰色字体 #808080 |

---

## 3. 问题跟踪表 Excel 规范

### 3.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 问题跟踪表 | 全部问题记录 |

### 3.2 列定义（15列）

| 列序 | 列头 | 列宽 | 数据验证 | 说明 |
|---|---|---|---|---|
| A | 问题编号 | 12 | - | I-NNNN |
| B | 关联风险 | 12 | - | R-NNN |
| C | 来源 | 15 | 下拉：日常例会发现/评审发现/风险转化/测试发现/客户反馈 | |
| D | 问题类别 | 12 | 下拉：技术类/进度类/资源类/需求类/质量类 | |
| E | 状态 | 10 | 下拉：待处理/处理中/已关闭 | |
| F | 问题描述 | 35 | - | |
| G | 优先级 | 15 | 下拉：紧急（当天必须解决）/高（本周内）/中（两周内）/低（有空再处理） | |
| H | 影响范围 | 20 | - | |
| I | 责任人 | 10 | - | |
| J | 提出日期 | 12 | - | YYYY-MM-DD |
| K | 解决方案 | 30 | - | |
| L | 计划解决日期 | 12 | - | YYYY-MM-DD |
| M | 实际解决日期 | 12 | - | YYYY-MM-DD |
| N | 是否延期 | 10 | - | 公式：=IF(AND(L2<>"",M2<>"",M2>L2),"是","否") |
| O | 备注 | 25 | - | 含跟踪记录 (1)(2)(3) |

### 3.3 公式

**N列（是否延期）公式：**

```
=IF(AND(L2<>"",M2<>"",M2>L2),"是","否")
```

若实际解决日期为空但已超过计划日期，公式变体：

```
=IF(L2="","",IF(M2<>"",IF(M2>L2,"是","否"),IF(TODAY()>L2,"是","否")))
```

### 3.4 条件格式

| 列 | 条件 | 格式 |
|---|---|---|
| G（优先级） | 包含"紧急" | 红色背景 #FFC7CE |
| E（状态） | 值 = "待处理" | 黄色背景 #FFEB9C |
| E（状态） | 值 = "已关闭" | 灰色字体 #808080 |
| N（是否延期） | 值 = "是" | 红色背景 #FFC7CE |

---

## 4. 计划表 Excel 规范

### 4.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 迭代一 | 第一迭代任务 |
| 迭代二 | 第二迭代任务 |
| 迭代三 | 第三迭代任务 |
| 迭代四 | 第四迭代任务 |

### 4.2 列定义（11列，每个 Sheet 相同）

| 列序 | 列头 | 列宽 | 数据验证 | 说明 |
|---|---|---|---|---|
| A | 一级任务 | 15 | - | 阶段分类 |
| B | 二级任务 | 25 | - | 具体任务 |
| C | 完成百分比 | 10 | - | 0%-100%，百分比格式 |
| D | 人员 | 12 | - | 姓名 |
| E | 计划起始时间 | 12 | - | YYYY/MM/DD |
| F | 计划截止时间 | 12 | - | YYYY/MM/DD |
| G | 进度状态 | 10 | 下拉：已完成/进行中/未开始/已搁置 | |
| H | 达成标准 | 20 | - | |
| I | 交付物 | 20 | - | |
| J | 偏差说明/风险备注 | 20 | - | 无偏差填 / |
| K | 整改措施/完成情况 | 20 | - | 无填 / |

### 4.3 条件格式

| 列 | 条件 | 格式 |
|---|---|---|
| G（进度状态） | 值 = "已完成" | 绿色背景 #C6EFCE |
| G（进度状态） | 值 = "进行中" | 蓝色背景 #BDD7EE |
| G（进度状态） | 值 = "已搁置" | 灰色背景 #D9D9D9 |
| C（完成百分比） | 值 < 0.5 且 状态 != "未开始" | 黄色字体 |

---

## 5. 成本测算表 Excel 规范

### 5.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 成本测算 | 成本结构汇总（人力/第三方/其他/税金/风险预备金） |
| 人力成本明细 | 按人员列出明细行（姓名/日薪/天数/小计）— 询问式细化 |
| 子项目对比 | 3个子项目的合同额/成本线/人月/人日对比 |

### 5.2 成本测算 Sheet

| 行 | A列 | B列 | C列 | D列 |
|---|---|---|---|---|
| 1 | 成本类别 | 成本明细 | 测算金额（元） | 测算说明 |
| 2 | 人力成本 | 项目管理岗 | =人力成本明细!D2 | X人 x XX元/月 x XX月 |
| 3 | | 产品与需求岗 | =人力成本明细!D3 | |
| 4 | | 开发岗 | =人力成本明细!D4 | |
| 5 | | 测试与安全岗 | =人力成本明细!D5 | |
| 6 | 人力小计 | | =SUM(C2:C5) | |
| 7 | 第三方成本 | 第三方工具/组件 | | |
| 8 | 第三方小计 | | =SUM(C7:C7) | |
| 9 | 其他直接成本 | 差旅与招待 | | |
| 10 | 其他小计 | | =SUM(C9:C9) | |
| 11 | 税金 | 增值税及附加 | =C6*税率 | 按X%增值税+附加 |
| 12 | 风险预备金 | 需求变更/返工 | =C6*预备金比例 | 按人力成本X%计提 |
| 13 | 总成本合计 | | =C6+C8+C10+C11+C12 | |
| 14 | 项目毛利 | | =合同额-C13 | |

**公式说明：**
- C列金额必须使用公式引用 `人力成本明细` Sheet，不可硬编码
- 税率和预备金比例应放在独立单元格（如 D11 注明税率值），公式引用该单元格
- C6 人力小计 = `=SUM(C2:C5)`
- C13 总成本 = `=C6+C8+C10+C11+C12`
- C14 毛利 = `=合同额单元格-C13`

### 5.3 人力成本明细 Sheet（询问式细化）

**AI 在生成成本测算表时应询问用户：**

```markdown
成本测算表需要填写人力成本明细。请提供以下信息（可按角色汇总或按个人列出）：

1. 按角色汇总模式：
   - 项目管理岗：X人，XX元/月，XX月
   - 开发岗：X人，XX元/月，XX月
   
2. 按个人明细模式：
   - 姓名 / 角色 / 日薪(元) / 投入天数 / 小计(=日薪×天数)

是否需要按个人列出明细？还是按角色汇总即可？
```

**按个人明细模式结构：**

| 列序 | 列头 | 数据验证 | 说明 |
|---|---|---|---|
| A | 姓名 | - | |
| B | 角色 | 下拉：项目管理/产品/后端开发/前端开发/测试/DBA/其他 | |
| C | 日薪（元） | - | 蓝色字体（硬编码输入值） |
| D | 投入天数 | - | 蓝色字体 |
| E | 小计（元） | 公式：=C2*D2 | 黑色字体（公式计算结果） |

**E列公式：** `=C2*D2`（逐行）

**成本测算Sheet的C2单元格引用：** `=SUMIF(人力成本明细!B:B,"项目管理",人力成本明细!E:E)`

### 5.4 子项目对比 Sheet

| 列序 | 列头 | 说明 |
|---|---|---|
| A | 子项目 | 全链通重构/企业通重构/信用监管登记注册重构 |
| B | 合同金额（万） | 蓝色字体（硬编码） |
| C | 50%成本线（万） | 公式：=B2*0.5 |
| D | 拟投入人月 | 蓝色字体 |
| E | 已使用人日 | 蓝色字体 |
| F | 人力成本（万） | 公式或引用 |
| G | 人力成本占比 | 公式：=F2/B2，百分比格式 |
| H | CPI | 公式：=B2/F2 |

**条件格式：**
- G列（人力成本占比）> 50% 时红色背景
- H列（CPI）< 1 时红色字体

---

## 6. 周报 Excel 规范

### 6.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 周报 | 2列 key-value 格式 |

### 6.2 格式

2列结构，非传统表格：

| 行 | A列 | B列 |
|---|---|---|
| 1 | **项目周报** | （合并单元格 A1:B1，标题行） |
| 2 | 项目名称 | [值] |
| 3 | 承建单位 | [值] |
| 4 | 报告周期 | YYYY年MM月DD日 - YYYY年MM月DD日 |
| 5 | 报告日期 | YYYY年M月D日 |
| 6 | 项目经理 | [姓名]（[联系电话]） |
| 7 | | |
| 8 | **一、项目概况** | （合并单元格，标题行） |
| 9 | 当前项目阶段 | [描述] |
| 10 | 里程碑完成情况 | [按模块分段描述] |
| 11 | 整体进度-计划 | XX% |
| 12 | 整体进度-实际 | XX% |
| 13 | 偏差说明 | [描述] |
| 14 | | |
| 15 | **二、本周项目进展情况** | （合并单元格，标题行） |
| 16 | 主要工作内容 | [按模块分组逐条列出] |
| 17 | 成果/输出物 | [列出可交付成果] |
| 18 | | |
| 19 | **三、待协调问题** | （合并单元格，标题行） |
| 20 | 问题1 | [描述] / 建议解决方案及时间 |
| 21 | 问题2 | [描述] / 建议解决方案及时间 |
| 22 | | |
| 23 | **四、下周工作计划** | （合并单元格，标题行） |
| 24 | 任务目标 | [按模块分组逐条列出] |
| 25 | 需配合事项 | [序号/事项/配合方] |

**样式：**
- A列宽度 20，B列宽度 70
- 标题行（合并单元格）：背景 #4472C4，白色加粗字体
- A列标签：加粗，顶端对齐
- B列内容：顶端对齐，自动换行

### 6.3 项目集汇总周报

项目集汇总周报不使用 key-value 格式，使用表格格式（参见 `portfolio-weekly-template.md` 的结构），包含各子项目进展汇总表、跨项目事项表、人员资源全景表、整体P&L表。

---

## 7. 经验教训记录单 Excel 规范

### 7.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 经验教训记录单 | 全部经验教训 |

### 7.2 列定义（9列）

| 列序 | 列头 | 列宽 | 数据验证 |
|---|---|---|---|
| A | 编号 | 8 | - |
| B | 经验主题 | 20 | - |
| C | 类别 | 10 | 下拉：质量/资源/技术/需求/管理/进度/成本 |
| D | 适用场景 | 20 | - |
| E | 典型现象 | 30 | - |
| F | 原因 | 25 | - |
| G | 经验结论 | 25 | - |
| H | 推荐做法 | 30 | - |
| I | 可复用资产 | 20 | - |

---

## 8. 项目基本信息 Excel 规范

### 8.1 Sheet 结构

| Sheet 名 | 内容 |
|---|---|
| 项目基本信息 | 环境信息、资源链接 |
| 干系人 | 干系人清单 |

### 8.2 项目基本信息 Sheet

2列 key-value 格式，分组：

| 分组 | 字段 |
|---|---|
| 基本信息 | 项目名称/承建单位/合同总额/项目经理 |
| 环境信息 | 原测试环境/信创测试环境/开发环境/数据库/容器管理/配置中心/CI-CD |
| 资源链接 | 原型图/设计图/接口文档/代码仓库/SFTP备份 |

**安全规则：** 密码列不导出，仅保留访问路径和账号名。

---

## 9. 生成流程与确认

### 9.1 生成前确认

AI 生成 Excel 前必须：

1. 读取 `project-brief.md` 确认项目信息
2. 读取对应 Markdown 事实源文件获取数据
3. 询问用户需要的 Excel 类型（参见 `11-output-artifact-rules.md` 格式确认规则）
4. 成本测算表额外询问"按角色汇总还是按个人明细"
5. 创建输出批次目录

### 9.2 生成后验证

Excel 文件生成后必须：

1. 使用 xlsx 技能的 `recalc` 模块校验公式
2. 使用 xlsx 技能的 `audit` 模块审计公式结构
3. 确认所有数据验证下拉框已设置
4. 确认所有条件格式已应用
5. 确认冻结窗格已设置
6. 更新 `manifest.md` 和 `outputs/index.md`

### 9.3 环境兼容

若当前环境无法生成 .xlsx 文件，按 `11-output-artifact-rules.md` 第 14 节环境兼容规则处理。

---

## 10. 与 Markdown 模板的对应关系

| Excel 文件 | Markdown 事实源 | 说明 |
|---|---|---|
| 需求跟踪矩阵 | requirements/requirement-register.md | 列结构完全对应，Excel 额外有数据验证和筛选 |
| 风险登记册 | risks/risk-register.md | Excel 额外有条件格式 |
| 问题跟踪表 | issues/issue-register.md | Excel 额外有延期公式和条件格式 |
| 计划表 | tasks/board.md | Excel 按迭代分 Sheet |
| 成本测算表 | plans/budget.md | Excel 有人力成本明细 Sheet 和公式 |
| 周报 | reports/weekly/当前周.md | Excel 用 key-value 格式 |
| 经验教训记录单 | reviews/lessons-learned.md | 列结构完全对应 |
| 项目基本信息 | context/project-context.md | Excel 用 key-value 格式 |
| 项目集汇总周报 | portfolio/reports/weekly/当前周.md | Excel 用表格格式 |
| 人员资源登记表 | portfolio/resources/resource-register.md | Excel 有容忍度公式和条件格式 |
